<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="62dp"
        android:layout_marginBottom="71dp"
        android:text="@string/txtTitulo"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/areaMaior"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/areaMaior"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/areaMaior"
        android:inputType="number|numberDecimal|numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/areaMenor"
        app:layout_constraintEnd_toEndOf="@+id/areaMenor"
        app:layout_constraintStart_toStartOf="@+id/areaMenor"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/altura"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="@string/altura"
        android:inputType="number|numberDecimal|numberSigned"
        android:textColorHint="#9B9B9B"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/areaMenor" />

    <EditText
        android:id="@+id/areaMenor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/areaMenor"
        android:inputType="number|numberDecimal|numberSigned"
        app:layout_constraintBottom_toTopOf="@+id/altura"
        app:layout_constraintEnd_toEndOf="@+id/altura"
        app:layout_constraintStart_toStartOf="@+id/altura"
        app:layout_constraintTop_toBottomOf="@+id/areaMaior" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:text="@string/btnCalcular"
        app:layout_constraintBottom_toTopOf="@+id/txtRes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/altura" />

    <TextView
        android:id="@+id/txtRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="175dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalcular" />

</androidx.constraintlayout.widget.ConstraintLayout>